# MultiAPIRouter

./: .gitignore  README.md  pyproject.toml  wallet_test_server.py
html/: websocket_client.html
multiapi_routes/: __init__.py
multiapi_routes/Routes/Configs/: __init__.py
multiapi_routes/Routes/Forward/: __init__.py
multiapi_routes/Routes/Skeleton/: __init__.py
multiapi_routes/Routes/VirtualBond/: __init__.py
multiapi_routes/Routes/Wallet/: __init__.py
tests/: test_wallet.py
